# fluent-typed

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: rust.yml
playground/example1/: Cargo.toml  build.rs
playground/example1/src/: multi_l10n.rs  single_gzip_l10n.rs  single_l10n.rs
src/: l10n_bundle.rs  lib.rs
src/tests/: mod.rs
src/tests/ast/: mod.rs  msg_select.rs  msg_select_num.rs  msg_text.rs  res_msg_text.rs
src/tests/snapshots/: fluent_typed__tests__format_generated_rust_file-2.snap  fluent_typed__tests__format_generated_rust_file.snap
src/tests/test_duplicate_key/en/: b.ftl
src/tests/test_format_rust_file/de/: settings.ftl
src/tests/test_format_rust_file/en-gb/: settings.ftl
src/tests/test_locales_deep_folders/de/: root.ftl
src/tests/test_locales_deep_folders/de/level1/: level1-messages.ftl
src/tests/test_locales_deep_folders/de/level1/level2/: level2-messages.ftl
src/tests/test_locales_deep_folders/de/level1/level2/level3/: deepest.ftl
src/tests/test_locales_deep_folders/en/: root.ftl
src/tests/test_locales_deep_folders/en/level1/: level1-messages.ftl
src/tests/test_locales_deep_folders/en/level1/level2/: level2-messages.ftl
src/tests/test_locales_deep_folders/en/level1/level2/level3/: deepest.ftl
tests/: playground.rs
