[package]
name = "fluent-typed"
version = "0.2.9"
edition = "2024"
description = "Type-safe access to Fluent localization messages"
keywords = ["fluent", "internationalization", "localization"]
categories = [
    "internationalization",
    "localization",
    "development-tools::build-utils",
]
license-file = "LICENSE"
repository = "https://github.com/human-solutions/fluent-typed"

[lib]
doctest = false

[features]
# When developing, make sure that the default is un-commented.
default = ["build", "langneg"]
build = []
langneg = ["dep:icu_locale_core"]

[dependencies]
fluent-syntax = "0.12"
fluent-bundle = "0.16"
unic-langid = "0.9"
icu_locale_core = { version = "2.1", optional = true, features = ["alloc"] }

[dev-dependencies]
insta = "1.46"
unic-langid = { version = "0.9", features = ["macros"] }
